# agent-marketplace

./: .gitignore  CHANGELOG.md  LICENSE  PROTOCOL.md  README.md  package-lock.json  package.json
bootstrap/: config.js  demo.js  directory.js  multi-client.js  seed-data.js  seed-real-content.js  start.js  stop.js
cli/: package.json
cli/src/: config.js  formatter.js
cli/tests/: cli.test.js
dashboard/: index.html
deploy/: .env.example  Dockerfile  README.md  docker-compose.yml  fly.toml
docs/: cost-savings-model.md
integration/claude-code/: auto-cache.js  config.json  pre-fetch.js  setup.js  status.js
integration/local-files/: publish.js  watch.js
red-team/agents/: adaptive-attacker.js  cartel-coordinator.js  sybil-controller.js
red-team/config/: default.js
red-team/framework/: ci-runner.js  harness.js  metrics-collector.js  report-generator.js  scenario.js
red-team/results/: post-fix-results.md  suite-api-security-results.md  suite-b-results.md  suite-c-results.md  v1.0.0-release-audit.md
sdk/python/: PUBLISH.md  README.md  pyproject.toml  setup.py
sdk/python/agent_marketplace/: __init__.py  cache.py  client.py  models.py
sdk/python/tests/: test_client.py
setup/: install.bat  install.ps1  install.sh  start.bat  start.sh
simulation/: RED-TEAM-REPORT.md  config.js  dashboard.js  run.js  walkthrough.js
src/: db.js  discovery.js  network-client.js  seeds.js  server.js
tests/: access-control.test.js  crawler-test.js  integration-hooks.test.js  integration.test.js  manual-test.js  peer-discovery.test.js  sdk-live-test.py
(+71 files in other folders)
